# trubleshoota

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build_error.txt  check_output.txt  err.txt  tauri.conf.json
src-tauri/icons/: icon.icns  icon.ico.bak
src-tauri/src/: lib.rs
src-tauri/src/modules/: mod.rs  net_ops.rs  pcap_analysis.rs  system.rs  utils.rs  wifi.rs
src/components/: Sidebar.tsx
src/components/dashboard/: ProfileDashboard.tsx
src/components/tools/: FirewallConverterTool.tsx  FragTool.tsx  LanScanTool.tsx  MtrTool.tsx  PcapAnalyzerTool.tsx  SubnetCalcTool.tsx  ToolViews.tsx  WifiTool.tsx
src/components/tools/__tests__/: FirewallConverter.test.tsx
src/config/: profiles.ts
