[package]
name = "trubleshoota"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full", "macros", "net", "rt-multi-thread", "time"] }
sysinfo = "0.37.2"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
stunclient = "0.4.1"
hickory-resolver = { version = "0.25.2", features = ["system-config"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
local-ip-address = "0.6.5"
pcap-parser = "0.17.0"
packet = "0.1.4"
tauri-plugin-dialog = "2.4.2"
etherparse = "0.19.0"

